Fix stretching of main_content to window.

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -128,7 +128,6 @@ table caption {
 }
 
 #main_content {
-	min-height: 100%;
 	border-radius: 1em;
 	background-color: white;
 	color: black;
